syntax = "proto3";

package proto;
option go_package = "github.com/yaitsmesj/gRPC-to-REST/proto";

message User {
    int32 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string avatar = 5; 
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetUserListRequest {
    int32 page = 1;
}
message GetUserListResponse {
    repeated User users = 1;
}

message CreateRequest {
    string first_name = 1;
    string job = 2;
}

message CreateResponse {
    string first_name = 1;
    string job = 2;
    int32 id = 3;
    string created_at = 4;
}

message UpdateRequest {
    string first_name = 1;
    string job = 2;
    int32 id = 3;
}

message UpdateResponse {
    string first_name = 1;
    string job = 2;
    string updated_at = 3;
}

message DeleteRequest {
    int32 id = 1;
}

message DeleteResponse {

}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetUserList(GetUserListRequest) returns (GetUserListResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}